<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hsv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="@color/white">
        <View 
            android:id="@+id/column_cursor"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bg_titlebar_base"
            android:visibility="gone"/>
   <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_column">
        
        <TextView 
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab1"
            android:textSize="20sp"
            android:textColor="@color/bg_color"/>
        <TextView 
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab2"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab3"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab4"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab5"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab6"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab7"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tab8"
            android:textSize="20sp"/>
 <!--       <TextView 
            android:id="@+id/tab9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="tab9"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/tab10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="tab10"
            android:textSize="20sp"/>
  -->
    </LinearLayout> 
    <ImageView
        android:id="@+id/cursor"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginLeft="10dp"
        android:scaleType="matrix"
        android:background="@color/bg_color"/>
</LinearLayout>
</HorizontalScrollView>
